--- a/environment.yml
+++ b/environment.yml
@@ -76,6 +76,7 @@ dependencies:
   - pip:
       - absl-py==2.1.0
       - accelerate==0.30.1
+      - bitsandbytes==0.43.1
       - click==8.1.7
       - datasets==2.19.1
       - dill==0.3.8
@@ -136,4 +137,3 @@ dependencies:
       - tyro==0.8.4
       - tzdata==2024.1
       - xxhash==3.4.1
-prefix: /home/andyjjrt/.local/miniforge3/envs/nlp-final
